using PSU recommended colors for links to address accessibility color contrast issues

--- a/css/screen.css
+++ b/css/screen.css
@@ -4,3 +4,12 @@
 .journal-name {
   font-style: italic;
 }
+a {
+  color: #005FA9;
+}
+a:hover, a:focus {
+  color: #491D70;
+}
+#lower-nav .top-bar-right a:hover:after {
+  border-bottom: 8px solid #491D70;
+}
